fix: readability of text

--- a/components/themes/VaporWave/VaporWave.module.css
+++ b/components/themes/VaporWave/VaporWave.module.css
@@ -250,8 +250,8 @@
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: rgba(0, 0, 0, 1);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0.5);
     position: relative;
 }
 
